--- a/TheQuize/packages.config
+++ b/TheQuize/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HandyControl" version="3.2.0" targetFramework="net472" />
+  <package id="MahApps.Metro.IconPacks.Material" version="4.11.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
   <package id="NAudio" version="2.0.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.0.0" targetFramework="net472" />
